--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ footer:
     #   link: /feed.xml
 
 # Build settings
+remote_theme: eliottvincent/bay
 markdown: kramdown
 sass:
     style: :compressed
